--- a/style.css
+++ b/style.css
@@ -5,14 +5,44 @@ h1, h2 {
 body {
   font-family: 'Open Sans', sans-serif;
   color: darkblue;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin: 10px 50px 10px 50px;
   background-color: Ivory;
+}
+
+#navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+#navbar li {
+  display: inline;
+}
+
+#navbar a {
+  margin-left: 75px;
+  margin-right: 75px;
 }
 
 img {
   float: left;
   margin-right: 10px;
+}
+
+.left {
+  float: left;
+  width: 300px;
+  padding: 1em;
+}
+
+.right {
+  float: right;
+  width: 300px;
+  padding: 1em;
+}
+
+.center {
+  margin: auto;
+  width: 300px;
+  padding: 1em;
 }
